--- a/web/frontend/package.json
+++ b/web/frontend/package.json
@@ -16,7 +16,6 @@
         "date-fns": "1.29.0",
         "downshift": "5.0.3",
         "firebase": "^7.19.1",
-        "firebaseui": "^4.6.1",
         "history": "^5.0.0",
         "jss-rtl": "0.3.0",
         "leaflet": "1.6.0",
@@ -28,18 +27,22 @@
         "react-chartjs-2": "2.9.0",
         "react-dom": "^16.13.1",
         "react-emotion": "10.0.0",
-        "react-firebaseui": "^4.1.0",
         "react-google-maps": "9.4.5",
         "react-infinite-scroll-component": "^5.0.5",
         "react-jss": "10.0.4",
         "react-leaflet": "2.6.1",
         "react-number-format": "4.4.1",
         "react-quill": "1.3.3",
+        "react-redux": "^5.1.1",
+        "react-redux-firebase": "^2.2.4",
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.3",
         "react-select": "3.0.8",
         "react-swipeable-views": "0.13.9",
-        "react-text-mask": "5.4.3"
+        "react-text-mask": "5.4.3",
+        "redux": "^4.0.0",
+        "redux-firestore": "^0.5.7",
+        "redux-thunk": "^2.3.0"
     },
     "scripts": {
         "start": "react-scripts start",
