--- a/web/frontend/package.json
+++ b/web/frontend/package.json
@@ -3,46 +3,40 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@material-ui/core": "4.9.4",
-        "@material-ui/icons": "4.9.1",
-        "@material-ui/lab": "4.0.0-alpha.44",
-        "@material-ui/styles": "4.9.0",
-        "@testing-library/jest-dom": "^4.2.4",
-        "@testing-library/react": "^9.5.0",
-        "@testing-library/user-event": "^7.2.1",
-        "autosuggest-highlight": "3.1.1",
-        "chart.js": "2.9.3",
-        "classnames": "^2.2.6",
-        "date-fns": "1.29.0",
-        "downshift": "5.0.3",
-        "firebase": "^7.19.1",
-        "history": "^5.0.0",
-        "jss-rtl": "0.3.0",
-        "leaflet": "1.6.0",
-        "moment": "2.24.0",
+        "@emotion/core": "^10.0.35",
+        "@material-ui/core": "^4.11.0",
+        "@material-ui/icons": "^4.9.1",
+        "@material-ui/lab": "^4.0.0-alpha.56",
+        "@mui-treasury/components": "^1.9.1",
+        "@mui-treasury/styles": "^1.13.0",
+        "clsx": "^1.1.1",
+        "file-saver": "^2.0.2",
+        "firebase": "7.7.0",
+        "history": "^4.10.1",
+        "lodash": "^4.17.20",
+        "material-table": "^1.69.0",
+        "material-ui": "^0.20.2",
+        "material-ui-chip-input": "^2.0.0-beta.2",
+        "material-ui-dropzone": "^3.4.0",
+        "moment": "^2.27.0",
+        "moment-timezone": "^0.5.28",
+        "node-sass": "^4.14.1",
         "react": "^16.13.1",
-        "react-autosuggest": "9.4.3",
-        "react-beautiful-dnd": "13.0.0",
-        "react-big-calendar": "0.24.0",
-        "react-chartjs-2": "2.9.0",
         "react-dom": "^16.13.1",
-        "react-emotion": "10.0.0",
-        "react-google-maps": "9.4.5",
-        "react-infinite-scroll-component": "^5.0.5",
-        "react-jss": "10.0.4",
-        "react-leaflet": "2.6.1",
-        "react-number-format": "4.4.1",
-        "react-quill": "1.3.3",
-        "react-redux": "^5.1.1",
-        "react-redux-firebase": "^2.2.4",
+        "react-elastic-carousel": "^0.4.1",
+        "react-google-button": "^0.7.1",
+        "react-redux": "^7.2.1",
+        "react-redux-firebase": "^3.7.0",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "3.4.3",
-        "react-select": "3.0.8",
-        "react-swipeable-views": "0.13.9",
-        "react-text-mask": "5.4.3",
-        "redux": "^4.0.0",
-        "redux-firestore": "^0.5.7",
-        "redux-thunk": "^2.3.0"
+        "react-scripts": "^3.4.3",
+        "react-swipeable-views": "^0.13.9",
+        "redux": "^4.0.5",
+        "redux-firestore": "^0.11.0",
+        "redux-thunk": "^2.3.0",
+        "styled-components": "^5.2.0",
+        "typeface-roboto": "0.0.75",
+        "uuid": "^7.0.3",
+        "xlsx": "^0.15.4"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -64,5 +58,11 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@testing-library/jest-dom": "^5.11.4",
+        "@testing-library/react": "^10.4.9",
+        "babel-jest": "^24.9.0",
+        "npm-force-resolutions": "0.0.3"
     }
 }
