--- a/web/frontend/package.json
+++ b/web/frontend/package.json
@@ -22,6 +22,7 @@
         "moment-timezone": "^0.5.28",
         "node-sass": "^4.14.1",
         "react": "^16.13.1",
+        "react-datetime-picker": "^3.0.3",
         "react-dom": "^16.13.1",
         "react-elastic-carousel": "^0.4.1",
         "react-google-button": "^0.7.1",
