--- a/web/frontend/package.json
+++ b/web/frontend/package.json
@@ -3,10 +3,12 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@date-io/date-fns": "^1.3.13",
         "@emotion/core": "^10.0.35",
         "@material-ui/core": "^4.11.0",
         "@material-ui/icons": "^4.9.1",
         "@material-ui/lab": "^4.0.0-alpha.56",
+        "@material-ui/pickers": "^3.2.10",
         "@mui-treasury/components": "^1.9.1",
         "@mui-treasury/styles": "^1.13.0",
         "clsx": "^1.1.1",
