--- a/web/frontend/package.json
+++ b/web/frontend/package.json
@@ -28,6 +28,7 @@
         "react-dom": "^16.13.1",
         "react-elastic-carousel": "^0.4.1",
         "react-google-button": "^0.7.1",
+        "react-google-charts": "^3.0.15",
         "react-redux": "^7.2.1",
         "react-redux-firebase": "^3.7.0",
         "react-router-dom": "^5.2.0",
